--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  fluttertoast: ^8.1.2
-  google_fonts: ^4.0.1
-  material_design_icons_flutter: ^6.0.7096
   url_launcher: ^6.1.8
 
 dev_dependencies:
@@ -48,7 +44,8 @@ flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
-  uses-material-design: true
+  # ! Remove this line because I am not using these icons
+  # uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/.
@@ -62,10 +59,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: fonts/Poppins-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
